--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+
+  </header>
+  <!-- <div id="show-details" class="w-50 mx-auto">
+    <div class="card ">
+
+    </div>
+  </div> -->
   <main class="main">
     <div class="search-field">
       <div class="search-box">
@@ -27,6 +34,9 @@
           autocomplete="off" id="search-btn" onclick="loadProducts()">
           Search
         </button>
+      </div>
+      <div id="show-details" class=" container card mb-3 w-50 mx-5">
+
       </div>
     </div>
     <div class="row">
