--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
           Search
         </button>
       </div>
+
+      <!-- show details on top   -->
+
       <div id="show-details" class=" container card mb-3 w-50 mx-5">
 
       </div>
     </div>
     <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7">
-        <div id="all-products" class="">
+      <div class="col-md-9 col-lg-9 col-sm-7 ">
+        <div id="all-products" class="product">
 
         </div>
       </div>
