--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
           Search
         </button>
       </div>
-
-      <!-- show details on top   -->
-
-      <div id="show-details" class=" container card mb-3 w-50 mx-5">
-
-      </div>
     </div>
+    <!-- show details on top   -->
+
+    <div id="show-details" class=" container card mb-3 w-50 mx-5 mt-3">
+
+    </div>
+
     <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7 ">
+      <div class="col-md-9 col-lg-9 col-sm-7 mt-3">
         <div id="all-products" class="product">
 
         </div>
