--- a/index.html
+++ b/index.html
@@ -21,23 +21,11 @@
 </head>
 
 <body>
-  <header>
+  <header></header>
 
-  </header>
-  <!-- <div id="show-details" class="w-50 mx-auto">
-    <div class="card ">
-
-    </div>
-  </div> -->
   <main class="main">
     <h2 class="text-center text-success my-2">Search your favourite product 💳</h2>
     <div class=" my-3">
-      <!-- <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button> -->
       <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search the product you want"
           aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -53,6 +41,7 @@
     </div>
 
     <div class="row">
+      <!-- all products container  -->
       <div class="col-md-9 col-lg-9 col-sm-7 mt-3">
         <div id="all-products" class="product">
 
